<resources>
    <string name="app_name">Pi</string>
    <string name="email_tf_hint">Email</string>
    <string name="username_tf_hint">Username</string>
    <string name="password_tf_hint">Password</string>
    <string name="login_btn_text">Log In</string>
    <string name="title">Pi</string>
    <string name="subtitle">A Student\'s Dream</string>
    <string name="sui_btn_title">Sign Up Instead</string>
    <string name="loginInstead_btn_title">Log In Instead</string>
    <string name="signUp_btn_text">Sign Up</string>
    <string name="signUpView">Sign Up</string>
    <string name="loginView">Log In</string>
    <string name="title_activity_main">Pi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_header_image_description">Profile Image</string>
    <string name="nav_header_textview_first">Full Name</string>
    <string name="nav_header_textview_second">\@username</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_subjects">Subjects</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_study">Study</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
