<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_menu_subjects"
            android:title="@string/menu_subjects" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_menu_study"
            android:title="@string/menu_study" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_log_out"
                android:title="@string/menu_log_out" />
        </menu>
    </item>

</menu>
