<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:paddingTop="@dimen/activity_vertical_margin_auth"
    android:paddingBottom="@dimen/activity_vertical_margin_auth"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textSize="@dimen/login_title_size" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/subtitle"
        android:text="@string/subtitle"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:textAlignment="center"
        android:textSize="@dimen/login_subtitle_size"
        android:layout_marginBottom="22dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@id/subtitle"
        android:layout_alignEnd="@id/subtitle"
        android:layout_below="@id/subtitle"
        android:hint="@string/email_tf_hint"
        android:id="@+id/emailTextField"
        android:layout_marginBottom="5dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/emailTextField"
        android:layout_alignEnd="@+id/emailTextField"
        android:layout_below="@id/emailTextField"
        android:hint="@string/username_tf_hint"
        android:id="@+id/usernameTextField"
        android:layout_marginBottom="5dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/usernameTextField"
        android:layout_alignEnd="@+id/usernameTextField"
        android:layout_below="@id/usernameTextField"
        android:hint="@string/password_tf_hint"
        android:id="@+id/passwordTextField"
        android:layout_marginBottom="22dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@id/passwordTextField"
        android:layout_alignEnd="@id/passwordTextField"
        android:layout_below="@id/passwordTextField"
        android:id="@+id/loginButton"
        android:text="@string/signUp_btn_text"
        android:onClick="signUp"
        android:background="@color/colorPrimary"
        android:textColor="#FFF" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/loginInstead_btn_title"
        android:textColor="#FFF"
        android:background="@color/colorPrimary"
        android:onClick="loginInstead" />
</RelativeLayout>
